fix: fix the spacing issue in about page

--- a/assets/css/stories.css
+++ b/assets/css/stories.css
@@ -113,9 +113,9 @@ html {
   width: 200px;
   border-radius: 50%;
   margin-right: 20px;
-  margin-left: 150px;
+  /* margin-left: 150px; */
 }
-/* 
+
 .card:nth-of-type(even)::after{
   content: '';
   width:150px;
@@ -142,7 +142,11 @@ html {
   border-top-right-radius: 0;
 
   z-index: 1;
-} */
+}
+
+
+
+
 
 @media only screen and (max-width: 640px) {
 
